--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "Test",
   "description": "Test",
   "version": "0.0.0",
-  "main": "bot.js",
-  "scripts": {
+  "main": "bot.js",  bot.js
+  "scripts": { 
     "start": "node bot.js"
   },
   "dependencies": {
